docs/assets/css/style.scss
/* ... */
/* --------- FRONT PAGE ------------- */

/* Make big bold text */
p.bigtext {
  text-align: center;
  font-size: x-large;
}

/* ------ EMBED GOOGLE CALENDAR RESPONSIVELY ----- */

/* Embed Google calendar responsively.
 * See: embedresponsively.com
 */
.embedContainer {
  position: relative;
  padding-bottom: 56.25%;
  overflow: hidden;
  max-width: 100%;

  /* This should probably be rex, but that
     * does not exist. It is not clear whether
     * rem or em is more appropriate.
     */
  /* height: 20em; */
  height: 0;
}

.embedContainer iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* ------ REDO SEARCHABLE MAP ----- */

#map {
  /* float:left; */
  width: 100%;
  height: 40em;
}

#map img {
  margin: 0;
  padding: 0;
}

#map-searchbar {
  width: 100%;
  max-width: 100%;
  display: flex;
  margin-bottom: 1em;

  .search-input {
    flex-grow: 1;
    padding: 3px 6px;
    font-family: $primary-font;
    font-size: inherit;

    &:placeholder {
      font-size: inherit;
      text-overflow: ellipsis;
    }
  }

  .leaflet-control-search {
    .search-button {
      /* margin: 0;
         * margin-right: 6px;
         */
      /* the cancel and the magnifying glass are both useless.
         * They also overlap each other. The magnifying glass is 
         * more useless?? So we drop that one.
         */
      display: none !important;
    }

    /* You need this to prevent overflow on mobile */
    .search-tooltip {
      max-width: inherit;
    }
  }

  .leaflet-control-search.search-exp {
    flex-grow: 1;
    display: flex;
    position: relative;
    align-items: center;
    border: none;
    max-width: 100%;
  }
}

/* ------ RESULTS PAGE ------ */

.candidate-list-grid {
  display: grid;
  /* 450px */
  grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
  grid-auto-rows: 1fr;
  margin-bottom: 2em;
}

.jurisdiction {
  display: flex;
  flex-wrap: wrap;
  background: #fefefe;
  margin: -0.5em;
}

.favourite-btn {
  background: none;
  border: none;
  cursor: pointer;
  padding: 0;
  line-height: 1.25;
  font-size: 1em;
  color: $dark;

  &.favourited {
    color: $pink;
  }

  &:focus-visible {
    outline: 2px solid $blue;
    border-radius: 2px;
  }
}

.notes-btn {
  background: none;
  border: none;
  cursor: pointer;
  padding: 0;
  line-height: 1.25;
  font-size: 1em;
  color: $dark;

  &.opened {
    color: $blue;
  }

  &:focus-visible {
    outline: 2px solid $blue;
    border-radius: 2px;
  }
}
/* ... */

